--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -2,7 +2,8 @@ import {Callout} from "nextra-theme-docs";
 
 # Custom Skins
 
-Because SkinsRestorer doesn't have a public API, We have developed two tools for uploading custom png files to SkinsRestorer!
+Because SkinsRestorer doesn't have a public API,
+We've developed two tools for uploading custom png files to SkinsRestorer!
 
 ## How to generate a custom skin
 
@@ -10,13 +11,12 @@ Because SkinsRestorer doesn't have a public API, We have developed two tools for
 
 We get a lot of questions about how to apply a custom skin, lucky we got you covered!
 
-For small servers we have the following:
-[Skinfile Generator](https://skinsrestorer.github.io/SkinFile-Generator/)
+For small servers, we have [Skinfile Generator](https://skinsrestorer.github.io/SkinFile-Generator/)
 
 This web app allows you to convert .png skin files to .skin files that are used by SkinsRestorer.
 If you use the web application, upload the skin files to the directory where skin data is saved and rename the files to
 the usernames they belong to.
-You can find the source code on the [GitHub page](https://github.com/riflowth/SkinFile-Generator).
+You can find the source code on the [GitHub page](https://github.com/SkinsRestorer/SkinFile-Generator).
 
 ### Skin System
 
@@ -29,11 +29,11 @@ If you're a **BIG server network and use a proxy**, we have a website with **Aut
 "Skin System"
 This web app allows your players to upload .png skin files to the database that is used by SkinsRestorer to allow
 people to use their own skin without a premium account!
-[[Click here for the Github]](https://github.com/riflowth/SkinSystem/)
+You can find the source code on the [GitHub page](https://github.com/SkinsRestorer/SkinSystem).
 
 ### Manual Generating
 
-1. Make sure the file and cape(optional) are online with a .png link
+1. Make sure the file and cape (optional) are online with a .png link
 2. Decode a skin to use the template (for example, [notch](https://sessionserver.mojang.com/session/minecraft/profile/069a79f444e94726a5befca90e38aaf5))
 3. Replace it with your skin data and make sure all info matches
 4. Encode it again with base64 and apply it to the matching .skin file
