Add more content to main page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,7 @@ title: SkinsRestorer
 
 
 
+
 import {ArrowDownTrayIcon} from "@heroicons/react/20/solid";
 import {useSSG} from 'nextra/ssg'; import Image from "next/image"; import TimeAgo from "react-timeago";
 
@@ -81,10 +82,26 @@ export const LatestRelease = () => {
     <main className="w-full min-w-0 max-w-6xl px-6 pt-4 md:px-12">
         <div className="mx-auto container">
             <LatestRelease/>
-            <div className="p-4">
-                <h1 className="mt-2 text-4xl font-bold tracking-tight text-slate-900 dark:text-slate-100">SkinsRestorer</h1>
-                <p className="mt-6 leading-7 first:mt-0">SkinsRestorer is a Minecraft plugin that allows the
-                    modification of ingame skins. That also allows the restoring of skins on offline mode servers.</p>
+            <div className="p-4 main-content">
+                # SkinsRestorer
+                SkinsRestorer is a Minecraft plugin that allows the modification of ingame skins. That also allows the restoring of skins on offline mode servers.
+
+                [![Discord Banner](https://discord.com/api/guilds/186794372468178944/widget.png?style=banner2)](https://skinsrestorer.net/discord)
+
+                ## Links
+
+                [Official SpigotMC page](https://www.spigotmc.org/resources/skinsrestorer.2124/)
+
+                How to help? -> [Contribute on GitHub](https://github.com/SkinsRestorer/SkinsRestorerX)
+
+                ## Contributors
+
+                They can be found at the [GitHub Insights](https://github.com/SkinsRestorer/SkinsRestorerX/graphs/contributors)
+
+                ## Donations
+
+                SkinsRestorer is free and is meant to stay like this. However, if you would like to show some love to the
+                devs, you can [donate](https://skinsrestorer.net/donate).
             </div>
         </div>
     </main>
