--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -15,8 +15,7 @@ import {Callout} from 'nextra-theme-docs'
 
 ### How to Contribute
 
-We have our own Crowdin page at [[translate.skinsrestorer.net](https://translate.skinsrestorer.net)]
-where you can contribute.
+We have our own Crowdin page at [translate.skinsrestorer.net](https://translate.skinsrestorer.net) where you can contribute.
 
 If a language is missing, you can contact support on our discord.
 
