--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -21,7 +21,7 @@ If a language is missing, you can contact support on our discord.
 
 ## How to update
 
-You can download updated translations from our Dev branch here: [[link]](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/languages)
+You can download updated translations from our [`dev` branch](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/languages).
 
 ## Select language
 
