Fix images on imgur site

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -4,7 +4,8 @@ import {Steps} from "nextra-theme-docs";
 
 ### Confirm a valid skin
 
-Make sure the URL your points to only the valid skin.
+Make sure the URL points to only the valid skin PNG file.
+If you are using imgur, make sure that the url ends with `.png`.
 A valid skin url should look like this: https://i.imgur.com/QuoWt6B.png
 
 You can see the image below as reference:
@@ -24,7 +25,7 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
 
     Upload the file to **imgur** (see image below)
 
-    ![](https://i.imgur.com/LvVYQxY.png)
+    ![](/assets/imgur/upload-image.png)
 
     ### Getting the url
 
@@ -34,7 +35,7 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
 
     It should copy an url like `https://i.imgur.com/abcdefgh.png`
 
-    ![](https://i.imgur.com/Pzq6dba.png)
+    ![](/assets/imgur/copy-link.png)
 
     That's it! you can now set the skin by using your **IMGUR** url!
 </Steps>
