Fixup links, add spigot to nav and improve installation pages.

--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -15,9 +15,9 @@ import {Callout} from 'nextra-theme-docs'
 
 ### How to Contribute
 
-We have our own Crowdin page at [translate.skinsrestorer.net](https://translate.skinsrestorer.net) where you can contribute.
+We have our own [Crowdin page](https://translate.skinsrestorer.net) where you can contribute your translations.
 
-If a language is missing, you can contact support on our discord.
+If your language is missing, you can contact support on our discord.
 
 ## How to update
 
