--- a/pages/docs/configuration/settings.mdx
+++ b/pages/docs/configuration/settings.mdx
@@ -35,7 +35,7 @@ To start off, you need to give the players the main command permission **skinsre
 /skin.
 
 Now you can start giving individual permissions, for the full permissions list
-see [[cmds & perms](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/cmds-&-perms)] on our wiki.
+see [[cmds & perms](/docs/configuration/commands-permissions)] on our docs.
 
 | Command             | Permissions                     |
 |---------------------|---------------------------------|
