--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -7,7 +7,7 @@ import Image from "next/image";
 
 Here you can find everything you need for your first time installation of SkinsRestorer as well as the recommended way
 of doing so.
-If you're having issues or questions while installing feel
+If you're having issues or questions while installing, feel
 free to ask questions on our [discord server](https://skinsrestorer.net/discord).
 
 ## Requirements
@@ -39,19 +39,19 @@ Select your server type below to get started.
                 height={24}/>
         }
         title="Bukkit/Spigot/Paper"
-        href="/docs/installation/install-bukkit"
+        href="/docs/installation/bukkit"
     >
     </Card>
     <Card
         icon={
             <Image
-                src="/platform/bungee.png"
+                src="/platform/bungeecord.png"
                 alt="BungeeCord"
                 width={24}
                 height={24}/>
         }
         title="BungeeCord"
-        href="/docs/installation/install-bungee"
+        href="/docs/installation/bungeecord"
     >
     </Card>
     <Card
@@ -64,7 +64,7 @@ Select your server type below to get started.
             </svg>
         }
         title="Sponge"
-        href="/docs/installation/install-sponge"
+        href="/docs/installation/sponge"
     >
     </Card>
     <Card
@@ -84,7 +84,7 @@ Select your server type below to get started.
             </svg>
         }
         title="Velocity"
-        href="/docs/installation/install-velocity"
+        href="/docs/installation/velocity"
     >
     </Card>
 </Cards>
