--- a/pages/docs/installation/bukkit.mdx
+++ b/pages/docs/installation/bukkit.mdx
@@ -2,27 +2,15 @@ import {Callout, Steps} from "nextra-theme-docs";
 
 # Installation on Bukkit/Spigot/Paper
 
-## Requirements
-
-To be able to use SkinsRestorer on your server, little is needed:
-
-<Callout emoji="📔">
-    Most Minecraft server hosting companies have all of this.
-</Callout>
-
-* Java from at least version 8
-* Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
-issues? > [troubleshoot connection](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshoot#connection))
-* Minecraft server versions and variants that we
-support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/master/README.md)]
+Before installing, we recommend you to read the [main installation page](/docs/installation).
 
 ## Basic Installation
 
-In this section, you can read how to set up our plugin SkinsRestorer your for Minecraft Server/Network!
-Select your server type below to get started.
+In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/Paper server.
 
 <Callout type="info" emoji="ℹ️">
-    If you're using BungeeCord/Velocity (or any other proxy system), you must install the plugin on your proxy as well!
+    If you're using BungeeCord, Velocity (or any fork of those), please follow the [BungeeCord installation guide](/docs/installation/bungeecord)
+    or the [Velocity installation guide](/docs/installation/velocity) instead.
 </Callout>
 
 <Steps>
@@ -30,7 +18,7 @@ Select your server type below to get started.
     Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
 
     ### Put it in the plugins folder
-    Place the `SkinsRestorer.jar` file in the ./plugins/ folder.
+    Place the `SkinsRestorer.jar` file in the `plugins` folder.
 
     ### Restart your server
     Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`, As `/reload` will break
