--- a/pages/docs/troubleshooting/guides.mdx
+++ b/pages/docs/troubleshooting/guides.mdx
@@ -27,16 +27,16 @@ steps and see if they're the same for your server
     troubleshoot.
 </Callout>
 
-### Basic Bungee Troubleshooting
+### Basic BungeeCord Troubleshooting
 
 1. Check
-the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#installing-Bungee)
+the [Basic Installation](/docs/installation/bungeecord)
 steps and see if they're the same for your server
 
 2. IF you *did configure spigot* than *remove the SkinsRestorer config.yml*
 [SkinsRestorer should never make a config on spigot, if it does your spigot is not set to bungee mode!!]
 
-3. Update the plugin if needed on bungee [(SpigotMC)](https://spigotmc.org/resources/skinsrestorer.2124/)
+3. Update the plugin if needed on BungeeCord [(SpigotMC)](https://spigotmc.org/resources/skinsrestorer.2124/)
 
 4. restart the server and see if this resolved your issue
 
