--- a/pages/docs/configuration/commands-permissions.mdx
+++ b/pages/docs/configuration/commands-permissions.mdx
@@ -9,8 +9,8 @@ If you wish to give a player "`skinsrestorer.command.set.other`" make sure you a
 BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command`" permission
 
 <Callout type="info" emoji="ℹ️">
-    Command not working? Read
-    [installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer)
+    Commands not working? Read the
+    [installation guide](/docs/installation)
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
