Fix docs url and improve text

--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,4 +1,9 @@
-# Why should I use SkinsRestorer?
+# Introduction
+
+SkinsRestorer is a plugin that restores skins for offline mode servers & networks that gives the players the ability to
+change their skins by typing a single command. In addition, SkinsRestorer allows caching skins on larger networks.
+
+## Why should I use SkinsRestorer?
 
 SkinsRestorer is the leading project in restoring and setting skins for Minecraft servers configured both online and
 offline mode.
@@ -7,7 +12,7 @@ Role-play servers, large networks, and even small video recording servers use Sk
 
 You don't need a permission plugin to control commands for your players, with SkinRestorer's plug-n-play philosophy.
 
-## Special features
+### Special features
 
 So, what is it in for you?
 
@@ -16,7 +21,17 @@ So, what is it in for you?
 * You can get rid of Steve & Alex skins by changing them to your own default skins.
 * Instant skin change (no rejoin required)
 
-## What else can you do?
+### What else can you do?
 
 When using a 3rd party add-on such as [SkinSystem](https://github.com/SkinsRestorer/SkinSystem), you can now upload
 custom `.png` skins via a web interface, by utilizing the awesome [MineSkin](https://mineskin.org) API!
+
+## Getting started
+
+
+import {Card} from 'nextra-theme-docs'
+
+<div className="mt-4">
+    <Card arrow title="Install SkinsRestorer" href="/docs/installation">
+    </Card>
+</div>
