--- a/pages/docs/installation/bukkit.mdx
+++ b/pages/docs/installation/bukkit.mdx
@@ -5,7 +5,7 @@ import {Callout, Steps} from "nextra-theme-docs";
 Before installing, we recommend you to read the [main installation page](/docs/installation).
 
 <Callout type="info" emoji="ℹ️">
-    If you're using BungeeCord, Velocity (or any fork of those), please follow the [BungeeCord installation guide](/docs/installation/bungeecord)
+    If you're using BungeeCord or Velocity (or any fork of those), please follow the [BungeeCord installation guide](/docs/installation/bungeecord)
     or the [Velocity installation guide](/docs/installation/velocity) instead.
 </Callout>
 
