Move a few things

--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -20,9 +20,9 @@ To be able to use SkinsRestorer on your server, little is needed:
 
 * Java from at least version 8
 * Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
-issues? > [troubleshoot connection](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshoot#connection))
+issues? > [troubleshoot connection](/docs/troubleshooting))
 * Minecraft server versions and variants that we
-support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/master/README.md)]
+support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/HEAD/README.md)]
 
 ## Platform Installation
 
