Improve front page and add back old redirects

--- a/pages/docs/installation/velocity.mdx
+++ b/pages/docs/installation/velocity.mdx
@@ -60,6 +60,9 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
     This file contains important settings that are required for the plugin to work the same on all servers.
     If you don't have the same `config.yml` file on all servers, you may experience issues.
 
+    ### Restart your servers
+    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the Velocity proxy.
+
     ### That's it!
     Our plugin should now work on your network!
 </Steps>
