--- a/pages/docs/installation/bungeecord.mdx
+++ b/pages/docs/installation/bungeecord.mdx
@@ -43,7 +43,7 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
     ```
 
     ### Restart your servers
-    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the Velocity proxy.
+    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the BungeeCord proxy.
 
     ### Ensure the plugin is in Proxy Mode on the servers
     In every Spigot server, check the server logs for the messages like these:
@@ -68,6 +68,9 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
     Make sure you have the same `plugins/SkinsRestorer/config.yml` file on all servers and the BungeeCord proxy.
     This file contains important settings that are required for the plugin to work the same on all servers.
     If you don't have the same `config.yml` file on all servers, you may experience issues.
+
+    ### Restart your servers
+    Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the BungeeCord proxy.
 
     ### That's it!
     Our plugin should now work on your network!
