--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -147,12 +147,12 @@ export const FeatureCard = ({title, description, icon}) => {
                         />
                     </a>
                     <FeatureCard
-                        title="Use your own skin"
+                        title="Bring your own skin"
                         description={<span>Use <code className="highlight-code">/skin url &lt;url&gt;</code> to use a skin from the internet!</span>}
                         icon={<PhotoIcon className="w-6 h-6 mx-auto my-2"/>}
                     />
                     <FeatureCard
-                        title="Use our GUI"
+                        title="Built-in GUI"
                         description={<span>SkinsRestorer has a GUI to change your skin, just run <code
                             className="highlight-code">/skins</code>!</span>}
                         icon={<Squares2X2Icon className="w-6 h-6 mx-auto my-2"/>}
