Bunch of changes

--- a/pages/404.mdx
+++ b/pages/404.mdx
@@ -19,8 +19,12 @@ import Image from "next/image";
                     alt="Nyan Cat"
                     width={500}
                     height={500}
+                    
                     className="mt-8 rounded-xl"/>
             </div>
+            <h1 className="text-2xl font-bold text-center">
+            <i>[go back](./)</i>
+            </h1>
         </div>
     </main>
 </article>
