--- a/pages/docs/configuration.mdx
+++ b/pages/docs/configuration.mdx
@@ -256,4 +256,4 @@ This is tso the skin won't check for update
 
 ## Default Config
 
-The default config file can be found on [GitHub](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/src/main/resources/config.yml)
+The default config values can be found on [GitHub](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/java/net/skinsrestorer/shared/config)
