--- a/pages/docs/installation/bukkit.mdx
+++ b/pages/docs/installation/bukkit.mdx
@@ -24,9 +24,9 @@ In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/
     Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`, As `/reload` will break
     SR!)[Plugman is also not supported]
 
-    ### Configure the plugin
-    You may now [configure SkinsRestorer](/setup/configuration#config-guide)
+    ### Verify if installed
+    Our plugin should now show via green in `/plugins`
 
     ### That's it!
-    Our plugin should now show via `/plugins`
+    You may now [configure SkinsRestorer](/setup/configuration#config-guide)
 </Steps>
