--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -22,7 +22,7 @@ To be able to use SkinsRestorer on your server, little is needed:
 * Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
 issues? > [troubleshoot connection](/docs/troubleshooting))
 * Minecraft server versions and variants that we
-support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/HEAD/README.md)]
+support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/HEAD/README.md#telescope-compatibility)]
 
 ## Platform Installation
 
