--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -146,15 +146,19 @@ export const FeatureCard = ({title, description, icon}) => {
                             </svg>}
                         />
                     </a>
+                    <Link
+                        href="/docs/features/skin-url"
+                    >
+                        <FeatureCard
+                            title="Use your own skin"
+                            description={<span>Use <code className="highlight-code">/skin url &lt;url&gt;</code> to use a skin from the internet!</span>}
+                            icon={<PhotoIcon className="w-6 h-6 mx-auto my-2"/>}
+                        />
+                    </Link>
                     <FeatureCard
-                        title="Use your own skin"
-                        description={<span>Use <code className="highlight-code">/skin url &lt;url&gt;</code> to use a skin from the internet!</span>}
-                        icon={<PhotoIcon className="w-6 h-6 mx-auto my-2"/>}
-                    />
-                    <FeatureCard
-                        title="Use our GUI"
-                        description={<span>SkinsRestorer has a GUI to change your skin, just run <code
-                            className="highlight-code">/skins</code>!</span>}
+                        title="Hook into us!"
+                        description={<span>SkinsRestorer has an api & event that can be hooked into!
+                        </span>}
                         icon={<Squares2X2Icon className="w-6 h-6 mx-auto my-2"/>}
                     />
                 </div>
