--- a/pages/docs/installation/bungeecord.mdx
+++ b/pages/docs/installation/bungeecord.mdx
@@ -62,7 +62,7 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
     SkinsRestorer will not work correctly if you don't see this message.
 
     ### Configure the plugin
-    You may now [configure SkinsRestorer](/setup/configuration#config-guide) on the BungeeCord server.
+    You may now [configure SkinsRestorer](/docs/configuration) on the BungeeCord server.
 
     ### Sync configs
     Make sure you have the same `plugins/SkinsRestorer/config.yml` file on all servers and the BungeeCord proxy.
@@ -71,6 +71,10 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
 
     ### Restart your servers
     Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the BungeeCord proxy.
+
+    ### Check console for errors
+    Check the console logs of Velocity and all servers for errors
+    If you see any errors, report them to us on Discord.
 
     ### That's it!
     Our plugin should now work on your network!
