--- a/pages/docs/installation/sponge.mdx
+++ b/pages/docs/installation/sponge.mdx
@@ -23,9 +23,10 @@ In this section, you can read how to set up our plugin SkinsRestorer your for Sp
     ### Restart your server
     Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`)
 
-    ### Configure the plugin
-    You may now [configure SkinsRestorer](/setup/configuration#config-guide)
+    ### Verify the plugin is installed
+    The plugin should now show in the `/sponge plugins list` command.
+    If it's missing, please check your console logs for errors.
 
     ### That's it!
-    Our plugin should now show at `/sponge plugins list`
+    You may now [configure SkinsRestorer](/docs/configuration).
 </Steps>
