--- a/pages/docs/installation/bukkit.mdx
+++ b/pages/docs/installation/bukkit.mdx
@@ -24,9 +24,10 @@ In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/
     Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`, As `/reload` will break
     SR!)[Plugman is also not supported]
 
-    ### Verify if installed
-    Our plugin should now show via green in `/plugins`
+    ### Verify the plugin is installed
+    The plugin should now show as green in the `/plugins` command.
+    If it's red or missing, please check your console logs for errors.
 
     ### That's it!
-    You may now [configure SkinsRestorer](/setup/configuration#config-guide)
+    You may now [configure SkinsRestorer](/docs/configuration).
 </Steps>
