--- a/pages/docs/installation/velocity.mdx
+++ b/pages/docs/installation/velocity.mdx
@@ -53,7 +53,7 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
     SkinsRestorer will not work correctly if you don't see this message.
 
     ### Configure the plugin
-    You may now [configure SkinsRestorer](/setup/configuration#config-guide) on the Velocity proxy.
+    You may now [configure SkinsRestorer](/docs/configuration) on the Velocity proxy.
 
     ### Sync configs
     Make sure you have the same `plugins/SkinsRestorer/config.yml` file on all servers and the Velocity proxy.
@@ -62,6 +62,10 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
 
     ### Restart your servers
     Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the Velocity proxy.
+    
+    ### Check console for errors
+    Check the console logs of Velocity and all servers for errors
+    If you see any errors, report them to us on Discord.
 
     ### That's it!
     Our plugin should now work on your network!
