Add extra info to why sr reload only exists on the proxy

--- a/pages/docs/configuration.mdx
+++ b/pages/docs/configuration.mdx
@@ -15,7 +15,8 @@ but if you need to change the plugin behavior, you're in the right place here.
     If you run a proxy network (BungeeCord/Velocity), you need to have the exact same `config.yml` file on the proxy and all servers.
     If you make a change to the config on the proxy, you need to make the same change on all servers.
     Make sure to reload the plugin on the proxy and all servers after changing the configuration.
-    The `/sr reload` command is only available on the proxy, you'll need to restart the servers to use the new config.
+    The `/sr reload` command is only available on the proxy (Because all backend servers are in Proxy Mode),
+    you'll need to restart the servers to use the new config.
 </Callout>
 
 ## Who can change skins?
